[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scripts/Guerreiro_escuridao.gd" type="Script" id=1]
[ext_resource path="res://Assets/Inimigos/NightBorne/NightBorne.png" type="Texture" id=2]
[ext_resource path="res://Assets/Efeitos_sonoros/Inimigos/ataque_boss01.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Efeitos_sonoros/Inimigos/morte_boss01_parte2.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Efeitos_sonoros/Inimigos/morte_boss01_parte1.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Efeitos_sonoros/Inimigos/dano_boss01.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Efeitos_sonoros/Inimigos/boss_01_aparecer.wav" type="AudioStream" id=7]

[sub_resource type="Gradient" id=23]
offsets = PoolRealArray( 0.0497925, 0.412698, 0.838174 )
colors = PoolColorArray( 0.562121, 0.127411, 0.652344, 1, 0.238972, 0.136963, 0.730469, 1, 0.0224304, 0.0909984, 0.820313, 1 )

[sub_resource type="GradientTexture" id=26]
gradient = SubResource( 23 )

[sub_resource type="Curve" id=24]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=27]
curve = SubResource( 24 )

[sub_resource type="ParticlesMaterial" id=25]
flag_disable_z = true
spread = 30.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 150.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -300.0
scale = 2.0
scale_curve = SubResource( 27 )
color_ramp = SubResource( 26 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 11, 15.5 )

[sub_resource type="Animation" id=10]
resource_name = "Aparecer"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 23 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Atacar"
length = 0.8
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 23 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.06, 0.12, 0.18, 0.24, 0.3, 0.36, 0.42, 0.48, 0.54, 0.6, 0.66 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.54, 0.66, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "hit"
}, {
"args": [  ],
"method": "fim_do_hit"
}, {
"args": [  ],
"method": "correr"
} ]
}
tracks/5/type = "audio"
tracks/5/path = NodePath("Som_ataque")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"clips": [ {
"end_offset": 0.2,
"start_offset": 0.1,
"stream": ExtResource( 3 )
} ],
"times": PoolRealArray( 0.32 )
}

[sub_resource type="Animation" id=1]
resource_name = "Correr"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 23 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 23, 24, 25, 26, 27, 28 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Dano"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 23 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 69, 70, 71, 72, 73 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "correr"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "Morte"
length = 4.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 23 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.7, 1, 1.2, 1.4, 1.6, 1.9, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114 ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("Som_morte_01")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.1,
"stream": ExtResource( 5 )
} ],
"times": PoolRealArray( 0 )
}
tracks/5/type = "audio"
tracks/5/path = NodePath("Som_morte_02")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 2.9 )
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 23 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 23 ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 11, 14 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 20, 14 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 25, 27.5 )

[node name="Guerreiro_trevas" type="KinematicBody2D" groups=["inimigos"]]
scale = Vector2( 2, 2 )
collision_layer = 2
collision_mask = 9
script = ExtResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 6.5, -20.5 )
emitting = false
amount = 12
lifetime = 0.5
explosiveness = 0.8
randomness = 0.1
process_material = SubResource( 25 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -24 )
texture = ExtResource( 2 )
flip_h = true
hframes = 23
vframes = 5
frame = 23

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3, -15.5 )
shape = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Aparecer = SubResource( 10 )
anims/Atacar = SubResource( 3 )
anims/Correr = SubResource( 1 )
anims/Dano = SubResource( 4 )
anims/Morte = SubResource( 5 )
anims/RESET = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -8.5, -15.5 )
enabled = true
cast_to = Vector2( -20, 0 )
collision_mask = 8

[node name="RayCast2D2" type="RayCast2D" parent="."]
position = Vector2( -16, -0.5 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 8

[node name="Hurtbox" type="Area2D" parent="." groups=["inimigos"]]
collision_layer = 32
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
modulate = Color( 0, 1, 0.321569, 1 )
position = Vector2( -3, -17 )
shape = SubResource( 7 )

[node name="Detector_jogador" type="Area2D" parent="."]
position = Vector2( 24, -19 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector_jogador"]
modulate = Color( 0.00784314, 0.109804, 0.941176, 1 )
position = Vector2( -36, -4 )
shape = SubResource( 8 )

[node name="Detector_ataque" type="Area2D" parent="."]
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector_ataque"]
position = Vector2( -14, -27.5 )
shape = SubResource( 9 )

[node name="Som_ataque" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 5.0

[node name="Som_morte_01" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="Som_morte_02" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="Som_dano" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="Som_aparecer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="body_entered" from="Detector_jogador" to="." method="_on_Detector_jogador_body_entered"]
[connection signal="body_entered" from="Detector_ataque" to="." method="_on_Detector_ataque_body_entered"]
